[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Metronome.gd" type="Script" id=1]
[ext_resource path="res://Sounds/metronome_low.wav" type="AudioStream" id=2]
[ext_resource path="res://Sounds/metronome_high.wav" type="AudioStream" id=3]

[node name="Metronome" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="LowClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = 10.0

[node name="HighClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 10.0
[connection signal="tree_exited" from="." to="." method="_on_Metronome_tree_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
